refactor: normalize aliases at collection time