@@ -5,7 +5,10 @@ import me.whereareiam.identica.Reloadable;
 
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.Locale;
+import java.util.Objects;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 public class DefaultCommandDefinitionCollector implements CommandDefinitionCollector, Reloadable {
 
@@ -30,7 +33,14 @@ public class DefaultCommandDefinitionCollector implements CommandDefinitionColle
     @Override
     public void reload() {
         config.reload();
-        this.cachedAliases = Set.copyOf(config.getAllowedCommands());
+        Set<String> raw = config.getAllowedCommands();
+        this.cachedAliases = raw == null ? Collections.emptySet() : raw.stream()
+                .filter(Objects::nonNull)
+                .map(String::trim)
+                .map(s -> s.startsWith("/") ? s.substring(1) : s)
+                .map(s -> s.toLowerCase(Locale.ROOT))
+                .filter(s -> !s.isEmpty())
+                .collect(Collectors.toUnmodifiableSet());
         this.cachedCommandNames = extractCommandNames(cachedAliases);
     }
 
